<resources>
    <string name="app_name">集大成者</string>

    <string name="activity_fragmentsenior_name">图书列表</string>
    <string name="activity_fragmentsenior_title_book_detail">图书详情</string>

    <string name="ui_list">界面 UI 控件</string>
    <string name="ui_actionbar_list">活动条 ActionBar</string>

    <string name="ui_listview_spinner_tip">请选择您喜欢的人物</string>

    <string name="ui_menu_menures_font_size">字体大小</string>
    <string name="ui_menu_menures_font_color">字体颜色</string>
    <string name="ui_menu_menures_plain_item">普通菜单项</string>
    <string name="ui_menu_menures_font_10">10号字体</string>
    <string name="ui_menu_menures_font_12">12号字体</string>
    <string name="ui_menu_menures_font_14">14号字体</string>
    <string name="ui_menu_menures_font_16">16号字体</string>
    <string name="ui_menu_menures_font_18">18号字体</string>
    <string name="ui_menu_menures_red_title">红色</string>
    <string name="ui_menu_menures_blue_title">蓝色</string>
    <string name="ui_menu_menures_green_title">绿色</string>

    <string name="service_firstservice_start">启动Service</string>
    <string name="service_firstservice_stop">关闭Service</string>

    <string name="service_bindservice_bind">绑定Service</string>
    <string name="service_bindservice_unbind">解除绑定</string>
    <string name="service_bindservice_getServiceStatus">获取Service状态</string>

    <string name="service_intentservice_start_service">启动普通Service</string>
    <string name="service_intentservice_start_intent_service">启动IntentService</string>

    <string name="service_alarm_setTime">设置闹铃</string>

    <string name="service_broadcast_send">发送广播</string>
    <string name="service_broadcast_sendOrdered">发送有序广播</string>

    <string name="service_aidlclient_get">获取远程Service的状态</string>

    <string name="event_gestureadd_name">请填手势名</string>

    <string name="event_speech_speech">朗读</string>
    <string name="event_speech_record">记录声音</string>

    <string name="res_valuesres_c1">F00</string>
    <string name="res_valuesres_c2">0F0</string>
    <string name="res_valuesres_c3">00F</string>
    <string name="res_valuesres_c4">FF0</string>
    <string name="res_valuesres_c5">F0F</string>
    <string name="res_valuesres_c6">0FF</string>
    <string name="res_valuesres_c7">07F</string>
    <string name="res_valuesres_c8">70F</string>
    <string name="res_valuesres_c9">F70</string>

    <string name="res_styleres_style1">样式1的格式</string>
    <string name="res_styleres_style2">样式2的格式</string>

    <string name="res_rawres_play_raw">播放Raw声音</string>
    <string name="res_rawres_play_asset">播放Asset声音</string>

    <string name="io_sharedpreferences_write">写入数据</string>
    <string name="io_sharedpreferences_read">读取数据</string>

    <string name="io_database_insert">插入</string>

    <string name="io_dict_dictactivity_insert">添加生词</string>
    <string name="io_dict_dictactivity_search">查找</string>
    <string name="io_dict_dictactivity_detail">解释</string>

    <string name="io_firstresolver_query">查询</string>
    <string name="io_firstresolver_update">更新</string>
    <string name="io_firstresolver_delete">删除</string>

    <string name="io_contactprovider_add">添加</string>
    <string name="io_contactprovider_name">联系人姓名</string>
    <string name="io_contactprovider_phone">电话</string>
    <string name="io_contactprovider_email">Email</string>

    <string name="io_mediaprovider_view">查看</string>

    <string name="graphics_bitmap_next">下一张</string>

    <string name="graphics_canvas_circle">圆形</string>
    <string name="graphics_canvas_square">正方形</string>
    <string name="graphics_canvas_rect">长方形</string>
    <string name="graphics_canvas_round_rect">圆角矩形</string>
    <string name="graphics_canvas_oval">椭圆形</string>
    <string name="graphics_canvas_triangle">三角形</string>
    <string name="graphics_canvas_pentagon">五角形</string>

    <string name="graphics_handdraw_width_1">1像素</string>
    <string name="graphics_handdraw_width_3">3像素</string>
    <string name="graphics_handdraw_width_5">5像素</string>
    <string name="graphics_handdraw_color">画笔颜色</string>
    <string name="graphics_handdraw_width">画笔宽度</string>
    <string name="graphics_handdraw_blur">模糊效果</string>
    <string name="graphics_handdraw_emboss">浮雕效果</string>

    <string name="graphics_shader_bitmap">位图</string>
    <string name="graphics_shader_line">线性渐变</string>
    <string name="graphics_shader_radial">圆形渐变</string>
    <string name="graphics_shader_sweep">角度渐变</string>
    <string name="graphics_shader_composite">混合</string>

    <string name="graphics_fatpo_play">播放</string>
    <string name="graphics_fatpo_stop">停止</string>

    <string name="graphics_showwave_sin">正弦曲线</string>
    <string name="graphics_showwave_cos">余弦曲线</string>

    <string name="media_audio_play">音频播放音乐</string>
    <string name="media_audio_up">增大音量</string>
    <string name="media_audio_down">降低音量</string>
    <string name="media_audio_normal">静音</string>
    <string name="media_audio_mute">正常</string>

    <string name="media_soundpool_bomb">爆炸声</string>
    <string name="media_soundpool_shot">射击声</string>
    <string name="media_soundpool_arrow">射箭声</string>

    <string name="hardware_accelerometer_tip">传感器返回的值</string>

    <string name="hardware_sensor_orientation">方向传感器返回的值</string>
    <string name="hardware_sensor_gyro">陀螺仪传感器返回的值</string>
    <string name="hardware_sensor_magnetic">磁场传感器返回的值</string>
    <string name="hardware_sensor_gravity">重力传感器返回的值</string>
    <string name="hardware_sensor_linearAcc">线性加速度传感器返回的值</string>
    <string name="hardware_sensor_temperature">温度传感器返回的值</string>
    <string name="hardware_sensor_light">光传感器返回的值</string>
    <string name="hardware_sensor_pressure">压力传感器返回的值</string>

    <string name="hardware_locationproviders_providerList">系统所有的 LocationProvider 列表</string>

    <string name="web_getpost_get">发送GET请求</string>
    <string name="web_getpost_post">发送POST请求</string>

    <string name="web_multithreaddown_down">下载</string>

    <string name="web_httpclient_get">访问页面</string>
    <string name="web_httpclient_login">登录系统</string>
    <string name="web_httpclient_name">用户名</string>
    <string name="web_httpclient_pass">密   码</string>

    <string name="phone_blocklist_managerBlock">管理黑名单</string>

    <string name="phone_sendsms_number">收件人号码：</string>
    <string name="phone_sendsms_content">短信内容：</string>
    <string name="phone_sendsms_send">发送</string>

    <string name="phone_groupsend_numbers">号码（多个号码以逗号隔开）</string>
    <string name="phone_groupsend_select">选择收件人</string>
    <string name="phone_groupsend_send">群发</string>

    <string name="desktop_addshortcut">添加快捷键</string>
    <string name="desktop_addshortcut_title">补间动画</string>

    <string name="desktop_appwidgetcollection_no_item">没有列表项</string>

    <string name="map_locationmap_txtLong">经度:</string>
    <string name="map_locationmap_txtLat">纬度:</string>
    <string name="map_locationmap_loc">定位</string>
    <string name="map_locationmap_lng">116.4475035667</string>
    <string name="map_locationmap_lat">39.9727954429</string>
    <string name="map_locationmap_gps">GPS定位</string>
    <string name="map_locationmap_manul">手动定位</string>

    <string name="map_geocoder_txtAddress">地址:</string>
    <string name="map_geocoder_address">沣宏大厦</string>
    <string name="map_geocoder_parse">解析</string>
    <string name="map_geocoder_reverse">反向解析</string>

    <string name="map_navigation_txtAddress">目标地</string>
    <string name="map_navigation_targetAddress">华南农业大学</string>
    <string name="map_navigation_nav">规划路线</string>

    <string name="diy_please_choose">请点击下方选择你的操作</string>
    <string name="diy_app_version">自身版本</string>
    <string name="diy_sys_version">系统版本</string>
    <string name="diy_get">"获取:"</string>
    <string name="diy_error">"糟糕！获取版本失败"</string>
</resources>