<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/graphics_handdraw_color">
        <menu>

            <!-- 定义一组单选菜单项 -->
            <group android:checkableBehavior="single">

                <!-- 定义多个菜单项 -->
                <item
                    android:id="@+id/red"
                    android:title="@string/ui_menu_menures_red_title" />
                <item
                    android:id="@+id/green"
                    android:title="@string/ui_menu_menures_green_title" />
                <item
                    android:id="@+id/blue"
                    android:title="@string/ui_menu_menures_blue_title" />
            </group>
        </menu>
    </item>
    <item android:title="@string/graphics_handdraw_width">
        <menu>

            <!-- 定义一组菜单项 -->
            <group>

                <!-- 定义三个菜单项 -->
                <item
                    android:id="@+id/width_1"
                    android:title="@string/graphics_handdraw_width_1" />
                <item
                    android:id="@+id/width_3"
                    android:title="@string/graphics_handdraw_width_3" />
                <item
                    android:id="@+id/width_5"
                    android:title="@string/graphics_handdraw_width_5" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/blur"
        android:title="@string/graphics_handdraw_blur" />
    <item
        android:id="@+id/emboss"
        android:title="@string/graphics_handdraw_emboss" />

</menu>