<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_geocoder_txtAddress" />
        <!-- 定义输入地址的文本框 -->
        <EditText
            android:id="@+id/address"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/map_geocoder_address" />

        <Button
            android:id="@+id/parse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/map_geocoder_parse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_locationmap_txtLong" />
        <!-- 定义输入经度值的文本框 -->
        <EditText
            android:id="@+id/lng"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/map_locationmap_lng" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/map_locationmap_txtLat" />
        <!-- 定义输入纬度值的文本框 -->
        <EditText
            android:id="@+id/lat"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/map_locationmap_lat" />

        <Button
            android:id="@+id/reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/map_geocoder_reverse" />
    </LinearLayout>

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cursorVisible="false"
        android:editable="false"
        android:gravity="top" />
</LinearLayout>
