<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:hint="@string/diy_please_choose"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true" />

    <Button
        android:id="@+id/get_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/get_app"
        android:layout_alignBottom="@+id/get_app"
        android:layout_alignParentRight="true"
        android:text="@string/diy_sys_version" />

    <TextView
        android:id="@+id/get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/get_app"
        android:layout_alignBottom="@+id/get_app"
        android:layout_alignLeft="@+id/version"
        android:text="@string/diy_get"
        android:textSize="20sp" />

    <Button
        android:id="@+id/get_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="41dp"
        android:layout_toRightOf="@+id/get"
        android:text="@string/diy_app_version" />
</RelativeLayout>